dep-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
spec:
  selector:
     app: httpd2
  ports:
   - port: 80
     targetPort: 80
  type: CLusterIP
