dep-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    http:
      paths:
      - pathType: Prefix
        path: /demo
        backend:
          service:
            name: demo-eduction
            port:
              number: 80
